# stock-advisor-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/calibration/: trade_node_calibration.json
frontend/: index.html  package-lock.json  package.json
frontend/public/: runtime-config.js
frontend/src/: App.jsx  api.js  mock.js  styles.css
scripts/: calibrate_trade_nodes.py  run_stock_advisor_backend.py  start_stock_advisor_local.ps1
src/invest_digital_human/: __init__.py  agent_planner.py  agent_tools.py  answering.py  article_loader.py  backtest_engine.py  calibration.py  chat_service.py  chunking.py  cleaning.py  config.py  conversation_intent_resolver.py  embeddings.py  fundamental_data.py  llm_client.py  llm_security_resolver.py  market_context.py  market_data.py  quote_lookup.py  reranking.py  retrieval.py  schemas.py  stock_advisor_api.py  stock_advisor_explainer.py  stock_advisor_graph.py  stock_advisor_service.py  stock_node_answering.py  stock_nodes.py  technical_nodes.py  text_utils.py  trade_plan_agent.py  trade_scoring.py
tests/: test_agent_planner.py  test_backtest_engine.py  test_calibration.py  test_cleaning.py  test_fundamental_data.py  test_llm_client.py  test_market_context.py  test_market_data.py  test_quote_lookup.py  test_stock_advisor_service.py  test_technical_nodes.py  test_trade_plan_agent.py  test_trade_scoring.py
